# Python package configuration
# ============================================================================ #
[build-system]
requires = [
    "scikit-build-core",
    "f90wrap",
    "numpy",  # for f2py
]
build-backend = "scikit_build_core.build"

# ============================================================================ #
[project]
name = "pygvec"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Fortran",
    "Private :: Do Not Upload",
]
dependencies = [
    "f90wrap",
    "numpy",
    "xarray",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
dev = ["pytest"]

[[project.maintainers]]
name = "Florian Hindenlang"
email = "florian.hindenlang@ipp.mpg.de"

[[project.maintainers]]
name = "Robert Babin"
email = "robert.babin@ipp.mpg.de"

# ============================================================================ #
[tool.scikit-build]
minimum-version = "0.8"
logging.level = "DEBUG"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = [
    "python/pygvec/_version.py",
]
build-dir = "pybuild"

[tool.scikit-build.cmake]
verbose = true
version = ">=3.15"
args = [
    "-GUnix Makefiles", # Ninja doesn't work with the macro for CMAKE_Fortran_FLAGS
    "--preset", "pygvec_config_debug",
]

[tool.setuptools_scm]
version_file = "python/pygvec/_version.py"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
