# Python package configuration
# ============================================================================ #
[build-system]
requires = [
    "scikit-build-core",
    "f90wrap",
    "numpy",  # for f2py
]
build-backend = "scikit_build_core.build"

# ============================================================================ #
[project]
name = "gvec"
description = "Galerkin Variational Equilibrium Code"
dependencies = [
    "f90wrap",
    "numpy",
    "xarray",
]
authors = [
    {name = "Florian Hindenlang"},
    {name = "Omar Maj"},
    {name = "Jonathan Faustin"},
    {name = "Maurice Maurer"},
    {name = "Alejandro Banon Navarro"},
    {name = "Erika Strumberger"},
    {name = "Joachim Geiger"},
    {name = "Matthias Borchardt"},
    {name = "Rohan Ramasamy"},
    {name = "fmarioli"},
    {name = "Denis Jarema"},
    {name = "Markus Rampp"},
    {name = "Tiago Tamissa Ribeiro"},
    {name = "Robert Koeberl"},
    {name = "Robert Babin"},
]
maintainers = [
    {name = "Florian Hindenlang", email = "florian.hindenlang@ipp.mpg.de"},
    {name = "Robert Babin", email = "robert.babin@ipp.mpg.de"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Fortran",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    # "License :: OSI Approved :: MIT License"
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Private :: Do Not Upload",
]
keywords = ["plasma", "mhd", "equilibrium"]
dynamic = ["version"]

[project.urls]
#Homepage
#Documentation
Repository = "https://gitlab.mpcdf.mpg.de/gvec-group/gvec"
Issues = "https://gitlab.mpcdf.mpg.de/gvec-group/gvec/-/issues"

[project.optional-dependencies]
dev = ["pytest"]

# ============================================================================ #
[tool.scikit-build]
minimum-version = "0.8"
logging.level = "DEBUG"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = [
    "python/gvec/_version.py",
]
build-dir = "pybuild"

[tool.scikit-build.cmake]
verbose = true
version = ">=3.15"
args = [
    "-GUnix Makefiles", # Ninja doesn't work with the macro for CMAKE_Fortran_FLAGS
    "--preset", "pygvec_config_debug",
]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Debug"
CMAKE_HOSTNAME = {env="CMAKE_HOSTNAME"}

[tool.setuptools_scm]
version_file = "python/gvec/_version.py"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
